--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "parcel-init",
+  "name": "dice-button-project",
   "version": "1.0.0",
   "description": "init a parcel instalation with config files",
   "main": "index.js",
   "scripts": {
-    "parcel-serve": "node_modules/.bin/parcel serve src/index.html"
+    "parcel-serve": "node_modules/.bin/parcel serve src/index.html",
+    "build-prod": "node_modules/.bin/parcel build src/index.html --no-source-maps -d build/output"
   },
   "author": "Alber Erre",
   "license": "MIT",
